# motoman_project

./: .ci.rosinstall  .gitignore  .gitlab-ci.yml  .preprocess.sh  .rosinstall  .travis.yml  README.md  dependencies.rosinstall  mesa_lata.scene  preprocess.sh
motoman_calib/: CMakeLists.txt  package.xml
motoman_calib/config/: calib.rviz
motoman_calib/launch/: calib_gazebo.launch
motoman_calib/src/: calib.cpp  calib_yuji.cpp
motoman_control/: CMakeLists.txt  package.xml
motoman_control/config/sia5/: sia5_control.yaml  (+3 more)
motoman_control/scripts/: move_to_joint.py  move_to_joint_real.py  move_to_joint_sim.py
motoman_control/src/: motoman_control_node.cpp
motoman_control/test/: launch_test.xml  sia5_launch_test.xml  sia5_nishida_lab_launch_test.xml  sia5_with_dhand_and_multi_kinect_launch_test.xml  sia5_with_dhand_launch_test.xml  sia5_with_jamming_and_kinectv2_launch_test.xml  sia5_with_jamming_launch_test.xml  sia5_with_kinectv2_launch_test.xml  sia5_with_table_launch_test.xml
motoman_demo/: CMakeLists.txt  package.xml
motoman_demo/config/: armarker_multiple
motoman_demo/launch/: ar_pose_multip.launch  ar_pose_single.launch  handring_parallel.launch  handring_parallel2.launch  handring_parallel2_trajectory.launch  handring_parallel2_trajectory.launch~  handring_parallel_attached_object.launch~  handring_parallel_for_pick_and_place.launch  handring_parallel_for_pick_and_place2.launch  handring_parallel_sidebox.launch  hantring_parallel.launch  pepper_websocket.launch
motoman_demo/scripts/: .#handring_parallel_planner_sidebox.py  exibision_2016.py  grasp_bounding_multi.py  grasp_multple.py  grasp_single.py  grasp_with_jamming.py  handring_parallel_executor.py  handring_parallel_planner.py  handring_parallel_planner2.py  handring_parallel_planner2_trajectory.py  handring_parallel_planner_attached_object.py  handring_parallel_planner_for_pick_and_place.py  handring_parallel_planner_for_pick_and_place2.py  handring_parallel_planner_sidebox.py  handring_serial.py  picking_demo.py  run_exihibition_2016.py
motoman_demo_msgs/: CMakeLists.txt  package.xml
motoman_demo_msgs/msg/: HandringPlan.msg
motoman_description/: .gitignore  CMakeLists.txt  package.xml
motoman_description/config/: joint_limits.yaml
motoman_description/urdf/: common.xacro  materials.xacro
motoman_gazebo/: CMakeLists.txt  package.xml
motoman_gazebo/test/: launch_test.xml  launch_test2.xml  sia5_empty_world_launch_test.xml  sia5_gazebo_nishida_lab_launch_test.xml  sia5_nishida_lab_launch_test.xml  sia5_with_dhand_and_multi_kinect_launch_test.xml  sia5_with_dhand_launch_test.xml  sia5_with_jamming_and_kinectv2_launch_test.xml  sia5_with_jamming_launch_test.xml  sia5_with_kinectv2_launch_test.xml  sia5_with_multi_kinectv2_launch_test.xml  sia5_with_nisida_lab_launch_test.xml  sia5_with_table_launch_test.xml
motoman_gazebo/worlds/: sia5_empty.world
motoman_gripper/: CMakeLists.txt  package.xml
motoman_gripper/Arduino/: README.md
motoman_gripper/launch/: sia5_gripper.launch
motoman_gripper/src/: Makefile  motoman_gripper_node.ino
motoman_gripper/test/: gripper_launch_test.xml
motoman_moveit/: CMakeLists.txt  CMakeLists.txt~  package.xml
motoman_moveit/config/: benchmark_config.cfg
motoman_moveit/launch/: kinect_cloud_merger.launch  kinect_downsampler.launch~  sia5_gazebo_nishida_lab_moveit_planning_execution.launch  sia5_moveit_planning_execution.launch  sia5_moveit_planning_execution_ikfast.launch  sia5_nishida_lab_moveit_planning_execution.launch  sia5_with_dhand_and_multi_kinect_moveit_planning_execution.launch  sia5_with_dhand_moveit_planning_execution.launch  sia5_with_jamming_and_kinectv2_moveit_planning_execution.launch  sia5_with_jamming_moveit_planning_execution.launch  sia5_with_kinectv2_moveit_planning_execution.launch  sia5_with_multi_kinectv2_moveit_planning_execution.launch  sia5_with_table_moveit_planning_execution.launch
motoman_moveit/scene/: Tobj_work.scene  exihibition_2016.scene  exihibition_2016_experiment.scene  exihibition_2016_sidebox.scene  exihibition_2016_sidebox_and_wall.scene  nishida_lab_demo.scene  nishida_lab_demo_with_table.scene  test.scene  zabuton.scene
motoman_moveit/scripts/: moveit_command_sender.py  moveit_command_sender_cartesian.py  moveit_command_sender_multi.py
motoman_moveit/src/: move_group_plan_single_target.cpp  move_group_plan_single_target_remove_octomap.cpp  point_cloud_merger.cpp
motoman_moveit/test/: sia5_gazebo_nishida_lab_moveit_planning_execution_launch_test.xml  sia5_moveit_planning_execution_launch_test.xml  sia5_with_dhand_and_multi_kinect_moveit_planning_execution_launch_test.xml  sia5_with_dhand_moveit_planning_execution_launch_test.xml  sia5_with_jamming_and_kinectv2_moveit_planning_execution_launch_test.xml  sia5_with_jamming_moveit_planning_execution_launch_test.xml  sia5_with_kinectv2_moveit_planning_execution_launch_test.xml  sia5_with_multi_kinectv2_moveit_planning_execution_launch_test.xml
motoman_perception/: CMakeLists.txt  package.xml
motoman_perception/script/: collision_map_interface.py
motoman_pointcloud/: CMakeLists.txt  package.xml
motoman_pointcloud/launch/: two_kinect_rviz.launch
motoman_recognition/motoman_cable_removal/: CMakeLists.txt  package.xml
motoman_recognition/motoman_euclidean_cluster/: CMakeLists.txt  package.xml
motoman_recognition/motoman_point_cloud/: CMakeLists.txt  package.xml
motoman_recognition/motoman_recognition/: CMakeLists.txt  package.xml
motoman_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
motoman_rviz_plugins/src/: bounding_box_array_display.cpp  bounding_box_array_display.h  bounding_box_display.cpp  bounding_box_display.h  bounding_box_display_common.h  euclidean_link_trajectory.cpp  euclidean_link_trajectory.h
motoman_viz/: CMakeLists.txt  package.xml
motoman_viz/src/: forward_kinematics.cpp  forward_kinematics_solver.cpp
motoman_viz_msgs/: CMakeLists.txt  package.xml
motoman_viz_msgs/msg/: BoundingBox.msg  BoundingBoxArray.msg  EuclideanJointTrajectory.msg  EuclideanLinkTrajectory.msg  EuclideanLinkTrajectoryPoint.msg
(+350 files in other folders)
