<?xml version="1.0"?>
<package>
  <name>motoman_control</name>
  <version>0.0.0</version>
  <description>The motoman_control package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/motoman_project</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>

  
  <export>
  </export>
  
</package>
