<?xml version="1.0"?>
<package>
  <name>motoman_control</name>
  <version>0.0.0</version>
  <description>The motoman_control package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/motoman_project</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>controller_manager</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>motoman_driver</run_depend>
  <run_depend>industrial_robot_client</run_depend>
  <run_depend>dhand_control</run_depend>
  
  <export>
  </export>
  
</package>
