<?xml version="1.0"?>
<package format="2">
  <name>motoman_control</name>
  <version>0.0.0</version>
  <description>The motoman_control package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/motoman_project</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>motoman_driver</exec_depend>
  <exec_depend>motoman_description</exec_depend>
  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>dhand_control</exec_depend>
  
  <test_depend>roslaunch</test_depend>

  <export>
  </export>
  
</package>
