<?xml version="1.0"?>
<package>
  <name>motoman_demo</name>
  <version>1.0.0</version>
  <description>The motoman_demo package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/motoman_project</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>motoman_demo_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>motoman_demo_msgs</run_depend>
  <run_depend>motoman_viz_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>motoman_sia5_moveit_config</run_depend>
  
</package>
