<?xml version="1.0"?>
<package>
  <name>motoman_gazebo</name>
  <version>0.1.0</version>
  <description>The motoman_gazebo package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/motoman_project</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>motoman_control</run_depend>
  <run_depend>motoman_point_cloud</run_depend>
</package>
