<?xml version="1.0"?>
<package>
  <name>motoman_moveit</name>
  <version>1.1.0</version>
  <description>The motoman_moveit package</description>
  
  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <maintainer email="ry0@todo.todo">ry0</maintainer>
  
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/motoman_project</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>nextage_ros_bridge</build_depend>
  <build_depend>nextage_moveit_config</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>nextage_ros_bridge</run_depend>
  <run_depend>nextage_moveit_config</run_depend>
  <run_depend>rospy</run_depend>
  
</package>
