<?xml version="1.0"?>
<package>
  <name>motoman_rviz_plugins</name>
  <version>0.0.0</version>
  <description>The motoman_rviz_plugins package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/motoman_project</url>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_depend>motoman_viz_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>rviz</run_depend>
  <run_depend>motoman_viz_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  
  <export>
	<rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
  
</package>
