<?xml version="1.0"?>
<package format="2">
  <name>motoman_rviz_plugins</name>
  <version>0.0.0</version>
  <description>The motoman_rviz_plugins package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/motoman_project</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>jsk_topic_tools</depend>
  <depend>motoman_viz_msgs</depend>
  <depend>message_generation</depend>
  <depend>rviz</depend>
  
  <export>
	<rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
  
</package>
